feat: add admin replies to user reports

--- a/server/src/admin/locale/en/report.json
+++ b/server/src/admin/locale/en/report.json
@@ -1,6 +1,7 @@
 {
     "properties": {
         "userId": "User",
-        "courseId": "Course"
+        "courseId": "Course",
+        "threadId": "Thread URL"
     }
 }
