feat: refine admin dashboard

--- a/server/src/admin/locale/en/report.json
+++ b/server/src/admin/locale/en/report.json
@@ -2,6 +2,6 @@
     "properties": {
         "userId": "User",
         "courseId": "Course",
-        "threadId": "Thread URL"
+        "threadId": "Thread"
     }
 }
